| Bug #56709 | Memory leaks at running the 5.1 test suite | ||
|---|---|---|---|
| Submitted: | 10 Sep 2010 6:56 | Modified: | 22 Nov 2010 1:12 |
| Reporter: | Georgi Kodinov | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Optimizer | Severity: | S3 (Non-critical) |
| Version: | 5.1 | OS: | Linux |
| Assigned to: | Alexey Kopytov | CPU Architecture: | Any |
| Tags: | Leak, memory leak | ||
[10 Sep 2010 6:56]
Georgi Kodinov
[10 Sep 2010 6:57]
Georgi Kodinov
the valgrind output
Attachment: leaks.txt (text/plain), 20.04 KiB.
[22 Sep 2010 18:13]
Alexey Kopytov
Valgrind warnings in InnoDB code were reported as a separate bug #56947.
[22 Sep 2010 19:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/118859 3514 Alexey Kopytov 2010-09-22 Bug #56709: Memory leaks at running the 5.1 test suite Fixed a number of memory leaks discovered by valgrind. @ dbug/dbug.c This is actually an addendum to the fix for bug #52629: - there is no point in limiting the fix to just global variables, session ones are also affected. - zero all fields when allocating a new 'state' structure so that FreeState() does not deal with unitialized data later. - add a check for a NULL pointer in DBUGCloseFile() @ mysql-test/r/partition_error.result Added a test case for bug #56709. @ mysql-test/r/variables_debug.result Added a test case for bug #56709. @ mysql-test/t/partition_error.test Added a test case for bug #56709. @ mysql-test/t/variables_debug.test Added a test case for bug #56709. @ sql/item_timefunc.cc There is no point in declaring 'value' as a member of Item_extract and dynamically allocating memory for it in Item_extract::fix_length_and_dec(), since this string is only used as a temporary storage in Item_extract::val_int(). @ sql/item_timefunc.h Removed 'value' from the Item_extract class definition. @ sql/sql_load.cc - we may need to deallocate 'buffer' even when 'error' is non-zero in some cases, since 'error' is public, and there is external code modifying it. - assign NULL to buffer when deallocating it so that we don't do it twice in the destructor - there is no point in changing 'error' in the destructor.
[1 Nov 2010 19:01]
Bugs System
Pushed into mysql-5.1 5.1.53 (revid:build@mysql.com-20101101184443-o2olipi8vkaxzsqk) (version source revid:build@mysql.com-20101101184443-o2olipi8vkaxzsqk) (merge vers: 5.1.53) (pib:21)
[4 Nov 2010 1:29]
Paul DuBois
Noted in 5.1.52, 5.5.7 changelogs. Memory leaks detected by Valgrind were corrected.
[9 Nov 2010 19:47]
Bugs System
Pushed into mysql-5.5 5.5.7-rc (revid:sunanda.menon@sun.com-20101109182959-otkxq8vo2dcd13la) (version source revid:sunanda.menon@sun.com-20101109182959-otkxq8vo2dcd13la) (merge vers: 5.5.7-rc) (pib:21)
[13 Nov 2010 16:25]
Bugs System
Pushed into mysql-trunk 5.6.99-m5 (revid:alexander.nozdrin@oracle.com-20101113155825-czmva9kg4n31anmu) (version source revid:alexander.nozdrin@oracle.com-20101113152450-2zzcm50e7i4j35v7) (merge vers: 5.6.1-m4) (pib:21)
[13 Nov 2010 16:38]
Bugs System
Pushed into mysql-next-mr (revid:alexander.nozdrin@oracle.com-20101113160336-atmtmfb3mzm4pz4i) (version source revid:vasil.dimov@oracle.com-20100629074804-359l9m9gniauxr94) (pib:21)
[1 Dec 2010 10:59]
Mattias Jonsson
bug#56996 was reported during review of this bug.
